# Project-ELPM

./: .gitignore  Home.py  README.md  app.py  association.py  cluster.py  main.py  pyproject.toml  requirements.txt  sentiment_analysis.py  user_data.json
Reference/: Edupreneurial_Leadership_Questionnaire (1).docx  dummy_data.csv  k-means-clustering-with-categorical-data.ipynb
